# account-similarity-api

./: Dockerfile  README.md  pyproject.toml
src/: filter.py  main.py
tests/: test_api.py
tests/data/: test_data.py
