[tool.poetry]
name = "account-similarity-api"
version = "0.1.0"
description = ""
authors = ["Matt Johnson <mattjohnson7296@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pydantic = "^2.6.1"
rapidfuzz = "^3.6.1"


[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
